--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,13 +13,23 @@
       <header class="hero">
           <div>
             <nav class"nav">
+                    <ul>
+                <li class="li-inline nav-item">
                     <a class="link" href="/">Home</a>
+                </li>
+                <li class="li-inline nav-item">    
                     <a class="link" href="/dashboard">Dashboard</a>
+                </li>    
                     {{#if loggedIn}}
+                <li class="li-inline nav-item">    
                     <a class="link" href="/" id="logout">Logout</a>
+                </li>    
                     {{else}}
+                <li class="li-inline nav-item">             
                     <a class="link" href="/login">Login</a>
+                </li>    
                     {{/if}}
+              </ul>   
                 </nav>          
           </div>
 
